2008-01-10  David Gilbert  <david.gilbert@object-refinery.com>

	Bug 1868521:
	* source/org/jfree/chart/ChartUtilities.java
	(writeChartAsJPEG): Create RGB image rather than ARGB.

----------  JFREECHART 1.0.9 RELEASED ------------------------

2008-01-04  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/XYPlot.java
	(drawQuadrants): Fix painting error when quadrant origin is outside plot
	area.

2008-01-03  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
	(drawHorizontalItem): Check visibility of average marker,
	(drawVerticalItem): Likewise,
	* source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
	(drawHorizontalItem): Check visibility of average marker,
	(drawVerticalItem): Likewise.

2007-12-20  David Gilbert  <david.gilbert@object-refinery.com>

    Fixes bug 1848961:
    * source/org/jfree/chart/renderer/category/GroupedStackedBarRenderer.java
    (calculateBarW0): Use correct dataset index.

2007-12-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/time/Week.java
    (Week(Date, TimeZone)): Hand on the zone,
    * tests/org/jfree/data/time/junit/WeekTests.java
    (testBug1448828): Control the default locale,
    (testBug1498805): Likewise,
    (testGetFirstMillisecondWithTimeZone): Control the default locale, and
    modify expected result accordingly,
    (testGetLastMillisecondWithTimeZone): Likewise.
    
2007-12-19  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/title/TextTitle.java
    (arrange): Implement additional options,
    (arrangeNN): New method,
    (arrangeFN): Likewise,
    (arrangeRN): Likewise.

2007-12-18  David Gilbert  <david.gilbert@object-refinery.com>

    Committing for Sergei Ivanov:
    * source/org/jfree/data/Range.java
    (intersects(Range)): New method,
    (expand): Handle special case for negative margins,
    (shift): Added argument check,