@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ---------------
  * TimeSeries.java
  * ---------------
- * (C) Copyright 2001-2007, by Object Refinery Limited.
+ * (C) Copyright 2001-2008, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   Bryan Scott;
@@ -72,6 +72,8 @@
  *               by Nick Guenther (DG);
  * 31-Oct-2007 : Implemented faster hashCode() (DG);
  * 21-Nov-2007 : Fixed clone() method (bug 1832432) (DG);
+ * 10-Jan-2008 : Fixed createCopy(RegularTimePeriod, RegularTimePeriod) (bug
+ *               1864222) (DG);
  * 
  */
 
@@ -900,8 +902,10 @@ public class TimeSeries extends Series implements Cloneable, Serializable {
      * Creates a new timeseries by copying a subset of the data in this time 
      * series.
      *
-     * @param start  the first time period to copy.
-     * @param end  the last time period to copy.
+     * @param start  the first time period to copy (<code>null</code> not
+     *         permitted).
+     * @param end  the last time period to copy (<code>null</code> not 
+     *         permitted).
      *
      * @return A time series containing a copy of this time series from start 
      *         until end.
@@ -934,7 +938,7 @@ public class TimeSeries extends Series implements Cloneable, Serializable {
             endIndex = -(endIndex + 1); // this is first item AFTER end period
             endIndex = endIndex - 1;    // so this is last item BEFORE end 
         }
-        if (endIndex < 0) {
+        if ((endIndex < 0)  || (endIndex < startIndex)) {
             emptyRange = true;
         }
         if (emptyRange) {
@@ -963,15 +967,13 @@ public class TimeSeries extends Series implements Cloneable, Serializable {
             return false;
         }
         TimeSeries s = (TimeSeries) object;
-        if (!ObjectUtilities.equal(
-            getDomainDescription(), s.getDomainDescription()
-        )) {
+        if (!ObjectUtilities.equal(getDomainDescription(), 
+                s.getDomainDescription())) {
             return false;
         }
 
-        if (!ObjectUtilities.equal(
-            getRangeDescription(), s.getRangeDescription()
-        )) {
+        if (!ObjectUtilities.equal(getRangeDescription(), 
+                s.getRangeDescription())) {
             return false;
         }
 
